refactor: update author name in package.json and clean up unused comments across multiple files

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "title": "Letta Agents",
     "description": "Chat with Letta stateful agents that remember and learn over time",
     "icon": "icon.png",
-    "author": "jwessel",
+    "author": "wesseljt",
     "categories": [
         "Productivity",
         "Developer Tools"
