Fix TypeScript and ESLint compatibility
- Upgrade to React 19 types to fix JSX component errors
- Upgrade dependencies to match other Raycast extensions
- Convert to ESLint v9 flat config format
- Fix type casting for strict TypeScript
- Include raycast-env.d.ts in tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "noEmit": true,
     "outDir": "dist"
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "raycast-env.d.ts"],
   "exclude": ["node_modules", "dist"]
 }
