Fix agent listing and add search functionality
- Fix: Handle ArrayPage response body instead of data property
- Add: Manage Agents command with server-side search
- Add: query_text parameter support for agent search
- Fix: Remove setActiveAgentId from useEffect dependencies to prevent infinite loop
- Add: Proper error handling and logging for agent fetching

The Letta SDK returns agents in result.body (ArrayPage) rather than
result.data, which was causing all agents to not appear. Also added
a dedicated Manage Agents command with full search capabilities.

👾 Generated with [Letta Code](https://letta.com)

Co-Authored-By: Letta <noreply@letta.com>

--- a/package.json
+++ b/package.json
@@ -23,6 +23,17 @@
                 "ai",
                 "memory"
             ]
+        },
+        {
+            "name": "agents",
+            "title": "Manage Agents",
+            "description": "View, search, and manage your Letta agents",
+            "mode": "view",
+            "keywords": [
+                "agents",
+                "manage",
+                "list"
+            ]
         }
     ],
     "preferences": [
